refinements and changes

--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -25,7 +25,7 @@ body {
 // Colors
 
 // .primary{
-//     color: #E04F00;
+//     color: #fe734a;
 // }
 
 .h-100{
@@ -41,7 +41,7 @@ body {
 }
 
 .text-primary {
-    color: #E04F00 !important;
+    color: #fe734a !important;
 }
 
 .text-secondy {
@@ -194,7 +194,7 @@ textarea {
 // Banner button
 
 .primary-btn.v-btn {
-    background-color: #E04F00 !important;
+    background-color: #fe734a !important;
     color: white !important;
     border-radius: 8px !important;
 
