--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -28,15 +28,19 @@ body {
 //     color: #fe734a;
 // }
 
-.h-100{
+.h-100 {
     height: 100vh !important;
 }
 
-.h-50{
+.h-75 {
+    height: 75vh !important;
+}
+
+.h-50 {
     height: 50vh !important;
 }
 
-.h-55{
+.h-55 {
     height: 55vh !important;
 }
 
@@ -266,6 +270,9 @@ textarea {
     font-family: poppins !important;
 }
 
+
+// Buttons
+
 .catering-website-btn.v-btn {
     background-color: transparent !important;
     border: 1px solid white !important;
@@ -278,5 +285,30 @@ textarea {
         font-weight: 400 !important;
         letter-spacing: 0px !important;
         text-transform: none !important;
+    }
+}
+
+.status-button,
+.back-to-store.v-btn {
+    .v-btn__content {
+        letter-spacing: 0;
+        text-transform: capitalize !important;
+    }
+}
+
+.continue-btn.v-btn {
+    color: white;
+    font-weight: bold;
+    height: 54px !important;
+    border-radius: 8px !important;
+    bottom: 0 !important;
+    width: 100% !important;
+
+    .v-btn__content {
+        text-transform: capitalize !important;
+        letter-spacing: 0px !important;
+        font-family: poppins !important;
+        font-size: 14px !important;
+        font-weight: 500 !important;
     }
 }
