--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -259,6 +259,11 @@ textarea {
     font-family: poppins !important;
 }
 
+.catering-text-field.v-text-field .v-input__control .v-text-field__details .v-messages.error--text .v-messages__wrapper .v-messages__message {
+    color: white !important;
+    font-weight: 600;
+}
+
 
 // Buttons
 
